[gd_scene load_steps=11 format=3 uid="uid://cel85oqwigtlk"]

[ext_resource type="Script" path="res://Scripts/Interface/TitleScreen.gd" id="1_pu1h8"]
[ext_resource type="PackedScene" uid="uid://57xdyvmpnisj" path="res://TitleScreen.tscn" id="2_23k46"]
[ext_resource type="Texture2D" uid="uid://2r4vjcemxqyp" path="res://Graphics/Cutscenes/Scruffy 1 featuring Razer.png" id="3_hfuyh"]
[ext_resource type="AudioStream" uid="uid://cxby0w6n1j5r3" path="res://BGM/Twinbee Rainbow Bell Adventure - Next Destination.ogg" id="4_nbikq"]
[ext_resource type="AudioStream" uid="uid://ba43d7q27yyp8" path="res://SFX/Menu Select.WAV" id="5_i4ef1"]
[ext_resource type="FontFile" uid="uid://cnxedrvkfma8u" path="res://Themes/comic.ttf" id="6_d660c"]
[ext_resource type="Script" path="res://Interface/TextCrawl.gd" id="7_mc5h8"]
[ext_resource type="Material" uid="uid://dmecugxdf67x" path="res://Objects/unlit_add.tres" id="8_n3qv7"]
[ext_resource type="Script" path="res://Scripts/Interface/ScreenFade.gd" id="9_c1o6e"]

[sub_resource type="LabelSettings" id="LabelSettings_uylj4"]
line_spacing = 0.0
font = ExtResource("6_d660c")
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pu1h8")
press_start_allowed = true
next_scene = ExtResource("2_23k46")

[node name="TitleScreen" type="Sprite2D" parent="."]
modulate = Color(0.756863, 0.658824, 1, 1)
position = Vector2(320, 240)
texture = ExtResource("3_hfuyh")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nbikq")
volume_db = -14.182
autoplay = true

[node name="SfxPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_i4ef1")
volume_db = -4.0

[node name="Text" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 488.0
offset_right = 416.0
offset_bottom = 1408.0
text = "It seems I made a wrong turn somewhere, and ended up in this purple palace. 

\"Are you lost or something?\"

I turn and see a couple of interesting looking folks.

\"I'm Scruffy, and this ghost shaped fellow here is Gambi! We're on a search for our friend Tikiman. We think Sticky's locked him up in his heavily guarded castle.\"

I shake Scruffy's hand.... or whatever it is stickmen use to grab things. I offer to help find his friend.

\"Thanks for the help! Gambi's still a bit shook from the spider maze incident, and King Quincy is off on his own adventure right now.\"

Gambi suddenly looks concerned.

\"Th-The introductions might have to wait, guys! We've got company!\"

A gigantic flame monster appears! How many flame monsters are there in this game, anyway?!

---------------[TO BE CONTINUED]------------------

[Press Start/Enter to return to the title screen]"
label_settings = SubResource("LabelSettings_uylj4")
autowrap_mode = 3
script = ExtResource("7_mc5h8")

[node name="FadeIn" type="ColorRect" parent="."]
material = ExtResource("8_n3qv7")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_c1o6e")
target_color = Color(0, 0, 0, 0)
start_color = Color(1, 1, 1, 1)
time_to_fade = 1.0
free_on_finish = true

[node name="FadeOut" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_c1o6e")
enabled = false
hang_time = 1.0

[connection signal="fade_finish" from="FadeOut" to="." method="_on_fade_out_fade_finish"]
